--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="World Wide Weather"
+      content="World Wide Weather Application Created By PA KHOZA. using metaweather API"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
